# ot-harjoitustyo

./: .coveragerc  .env.public  README.md  pyproject.toml  tasks.py
Documentation/: Changelog.md  Software-Requirements-Specification.md  Working-Hours.md  software_requirements_specification.md
data/: db.sqlite
documentation/: architecture.md  changelog.md  manual.md  software_requirements_specification.md  tests.md  working_hours.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko3/: monopoli.md  sekvenssikaavio_t3.md  sekvenssikaavio_t4.md
src/: build_world.py  camera.py  display.py  game_state.py  gamestate.py  level.py  main.py  main_menu.py  maps.py  menu.py  pause_menu.py  player_input.py  world.py
src/assets/: colors.py
src/collisions/: coin_collisions.py  enemy_collisions.py  main_collisions.py
src/config/: colors.py  display.py  general.py  paths.py  sprite_sizes.py  text_settings.py
src/db/: config.py  connection.py  high_score_repository.py  init_db.py
src/levels/: level_1.txt
src/menus/: main_menu.py  menu_init.py  pause_menu.py
src/services/: animate_character.py  animate_object.py  camera.py  collisions.py  draw_text.py  finish_screen.py  import_images.py  import_maps.py  move_character.py  player_input.py  timer.py
src/sprites/: coin.py  enemy.py  goal.py  ground_tile.py  player.py  sky_tile.py  tile.py
src/tests/: animate_character_test.py  coin_position_test.py  finish_screen_test.py  game_state_test.py  menu_test.py  move_character_test.py  move_player_test.py  player_health_test.py  player_input_test.py  read_sql_test.py
(+14 files in other folders)
